--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,13 +3,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".MainActivity">
 
     <ScrollView
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/scroll"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -17,6 +21,16 @@
             android:paddingLeft="16dp"
             android:paddingRight="16dp"
             android:orientation="vertical" >
+            <TextView
+                android:id="@+id/carParkTextView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Car Park: "/>
+            <TextView
+                android:id="@+id/closestLaneTextView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Closest Lane: "/>
             <Button
                 android:id="@+id/requestBackgroundLocationButton"
                 android:layout_width="match_parent"
@@ -107,7 +121,14 @@
                 android:layout_height="wrap_content"
                 android:text="Stop Beacon Service"
                 android:onClick="stopService_Click"/>
+            <Button
+                android:id="@+id/statusServiceButton"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Status Beacon Service"
+                android:onClick="statusService_Click"/>
             <TextView
+                android:id="@+id/statusTextView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="UbiParkSDK Test"/>
